add localiczed string to menu option

--- a/src/languages/_english.json
+++ b/src/languages/_english.json
@@ -453,6 +453,7 @@
         "for_sale": "For sale",
         "in_showcase": "In Showcase",
         "last_sale_price": "Last sale price",
+        "open_in_web_browser": "Open in Web Browser",
         "opensea": "OpenSea",
         "properties": "Properties",
         "save_to_photos": "Save to Photos",
